--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 ultralytics==8.3.64
-opencv-python-headless
-numpy
-Pillow
-streamlit
+opencv-python-headless==4.10.0.84
+numpy==1.26.4
+Pillow==10.4.0
+streamlit==1.37.0
+torch==2.3.1
