--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/ultralytics/ultralytics.git@main
+git+https://github.com/ultralytics/ultralytics.git@v8.3.63
 opencv-python-headless
 numpy
 Pillow
